--- a/css/styles.css
+++ b/css/styles.css
@@ -118,10 +118,11 @@ body {
   font-weight: 700;
   font-size: 22px;
   line-height: 27px;
+  margin: 20px 0 20px 0;
 }
 
 .projects-container {
-  margin: 0 0 50px 0;
+  margin: 0 0 0px 0;
 }
 
 .projects-item {
@@ -226,5 +227,4 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
- 
 }
