--- a/css/styles.css
+++ b/css/styles.css
@@ -35,17 +35,17 @@ body {
   color: #2979ff;
 }
 
-.saidebar {
+.sidebar {
   background: #dfeeff;
 }
 
-.saidebar-content {
+.sidebar-content {
   padding-top: 20px;
   padding-left: 40px;
   padding-right: 40px;
 }
 
-.sadebar-title {
+.sidebar-title {
   font-style: normal;
   font-weight: 700;
   font-size: 22px;
@@ -63,7 +63,7 @@ body {
   font-weight: 700;
   font-size: 14px;
   line-height: 24px;
-  margin-bottom: 8pcx;
+  margin-bottom: 8px;
 }
 
 .contacts-link {
